<?xml version="1.0" encoding="utf-8"?>
<resources>
    
       <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
	<string name="yidao">用车</string>
	<string name="trains">查询</string>
	<string name="qianzheng">签证</string>
	<string name="youlun">游轮</string>
	<string name="lvyou">旅游</string>
	<string name="ydingdan">用车订单</string>
	<string name="dongtai">航班动态</string>
	<string name="vipmain">会员中心</string>
    <string name="app_name">差旅天下(公众版)</string>
    <string name="fly_ticket">机票</string>
    <string name="fly_order">订单填写</string>
    <string name="order_res">订单结果</string>
    <string name="fly_query_result">查询结果</string>
    <string name="fly_from">长春</string>
    <string name="fly_to">北京</string>
    <string name="no_limit">航空公司(不限)</string>
    <string name="select_city">选择城市</string>
    <string name="select_date">选择日期</string>
    <string name="select_company">选择航空公司</string>
    <string name="start_date">出发日期</string>
    <string name="back_date">返程日期</string>
    <string name="login_text">登录</string>
    <string name="register_text">注册</string>
    <string name="forget_pswd">忘记密码？</string>
    <string name="username_login_hint">请填写账号</string>
    <string name="password_login_hint">请填写密码</string>
    <string name="username_register_hint">必须使用手机号注册</string>
    <string name="password_register_hint">请输入密码</string>
    <string name="repassword_register_hint">再次确认密码</string>
    <string name="find_back_pswd_text">找回密码</string>
    <string name="dep_text">起</string>
    <string name="remind">温馨提示:\n1.重置密码每天限用3次，请在收到临时密码后尽快在“会员中心”中修改密码。\n2.如果您的账号未绑定手机，无法重置密码，您可以致电客服4006568777进行人工服务。</string>
    <string name="action_settings">Settings</string>
    <string name="hotel_book">酒店</string>
	<string name="remote_call_fail">调用远程服务失败</string>




    <string name="kong"></string>
    <string name="cancel">取消</string>
    <string name="phone_book">电 话 预 定</string>
    <string name="oneway">单程</string>
    <string name="backway">往返</string>
    <string name="str_hd">航段</string>
    <string name="start_city">出发城市</string>
    <string name="get_city">到达城市</string>
    <string name="str_cw">航空公司</string>
    <string name="date">2014</string>

    <string name="str_select_city">搜索</string>
    <string name="cancel_Button">取消</string>
    <string name="ok_button">确定</string>
    <string name="str_qf">起飞</string>
    <string name="str_jl">降落</string>
    <string name="str_tpgz">退票规则：</string>
    <string name="str_gqgd">改签规定：</string>
    <string name="username">会　　员</string>
    <string name="pass">密　　码</string>
    <string name="write">填写申请单</string>
    <string name="see">查看申请单</string>
    <string name="remember">记住会员</string>
    <string name="select_person">添加乘机人</string>
    <string name="cjpeople">乘机人信息</string>
    <string name="child_unselect">(暂不支持儿童票)</string>
    <string name="sms">用于短信确认,客服</string>
    <string name="totalprice">订单总价:</string>
    <string name="travel">需要行程单</string>
    <string name="checkperson">联系人信息</string>
    <string name="submit_order">提交订单</string>
    <string name="check_people">联系方式</string>
    <string name="credentials_num">证件号码:</string>
    <string name="people_name">姓　　名:</string>
    <string name="credentials">证件类型:</string>
    <string name="insurance">保险份数</string>
    <string name="go">去　　程:　</string>
    <string name="back">返　　程:　</string>
    <!-- 酒店 -->
    <string name="str_cgcx">常规查询</string>
    <string name="str_zbcx">周边查询</string>
    <string name="str_cs">城市</string>
    <string name="str_rzrq">入住日期</string>
    <string name="str_tfrq">退房日期</string>
    <string name="str_jgxj">价格</string>
    <string name="nolimit">价格不限</string>
    <string name="yibaiwu">150以下</string>
    <string name="tosanbai">150-300</string>
    <string name="toliubai">300-600</string>
    <string name="liubaiyishang">600以上</string>
    <string name="starlowtohigh">星级从低到高</string>
    <string name="starhightolow">星级从高到低</string>
    <string name="pricelowtohigh">价格从低到高</string>
    <string name="pricehightolow">价格从高到底</string>
    <string name="str_fw">范围</string>
    <string name="loadmore">加载更多</string>
    <string name="room_num">房间数量</string>
    <string name="lasttime">房间保留至</string>
    <string name="lasttimes">22:00-次日6:00</string>
    <string name="timeseven">18:00-21:00</string>
    <string name="timeeight">19:00-22:00</string>
    <string name="timenine">20:00-23:00</string>
    <string name="timeten">21:00-23:59</string>
    <string name="peoplename">联系人姓名</string>
    <string name="payment_way">支付方式:</string>
    <string name="payment">前台支付</string>
    <string name="hotelname">酒店名称:</string>
    <string name="hoteladdress">地址:</string>
    <string name="checkintime">日住日期:</string>
    <string name="checkouttime">退房日期:</string>
    <string name="get_hotel_time">入住时间:</string>
    <string name="roomtype">房型:</string>
    <!-- 会员中心 -->
    <string name="yjmoney">预计申请金额:</string>
    <string name="jkmoney">实际借款金额:</string>
    <string name="RouteType">行程</string>
    <string name="traveltype">消费</string>
    <string name="air">机票</string>
    <string name="hotel">酒店</string>
    <string name="jiaotong">单程</string>
    <string name="train">往返</string>
    <string name="liancheng">联程</string>
    <string name="because">请您填写申请理由</string>
    <string name="backstartcity">返程城市</string>
    <string name="dept">部门</string>
    <string name="realname">真实姓名</string>
    <string name="starttime">起始时间</string>
    <string name="endtime">截止时间</string>
    <string name="agree">同意</string>
    <string name="unagree">拒绝</string>
    <string name="flightcode">请输入航班号</string>
    <string name="flightno">按航班号</string>
    <string name="flightcity">按起降地</string>
    <string name="cardpeople">持卡人信息</string>
    <string name="bankinfo">银行卡信息</string>
    <string name="peopleID">身份证号</string>
    <string name="peoplesname">姓　　名</string>
    <string name="valid">有效期</string>
    <string name="bankcardno">卡　号</string>
    <string name="xinyk">信用卡</string>
    <string name="jiejk">借记卡</string>
    <string name="checkpeople">审批人　:</string>
    <string name="registration">免费注册</string>
    <string name="email">邮　　箱</string>
    <string name="findtype">找回方式</string>
    <string name="findpass">找回密码</string>
    <string name="credentialss_num">证件号码</string>
    <string name="usr_name">用户名</string>
</resources>
