<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- title -->
    <FrameLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3aace0">

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_gravity="left"/>
        <TextView
            android:id="@+id/title_text"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:text="@string/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </FrameLayout>
    <LinearLayout 
        android:id="@+id/login_field"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:layout_below="@id/title">
        <EditText 
                android:id="@+id/user_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usernamebg"
                android:paddingLeft="100dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/username_login_hint"/>

        <EditText 
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/passwordbg"
                android:paddingLeft="100dp"
                android:inputType="textPassword"
                android:hint="@string/password_login_hint"/>
        <RelativeLayout
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            <ImageView 
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/login"/>
            <ImageView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/register"/>
        </RelativeLayout>
        <TextView 
            android:id="@+id/forget_pswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pswd"
            android:layout_marginTop="16dp"
            android:textColor="#636363"
            android:textSize="18sp"/>
        </LinearLayout>
    
</RelativeLayout>