<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/changed_part"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:layout_below="@id/to">
    <FrameLayout
        android:id="@+id/date_short_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp">
        <ImageView
            android:id="@+id/date_bg_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/data_short"/>
        <TextView
            android:id="@+id/date_text_from"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/date_short_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp">
        <ImageView
            android:id="@+id/date_bg_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/data_short"
            />
        <TextView
            android:id="@+id/date_text_to"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/back_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_short_to"
        android:layout_marginTop="20dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp">
        <ImageView
            android:id="@+id/type_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/air_company"
            android:layout_gravity="center"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/type_text"
            android:textColor="#000000"
            android:textSize="22sp"
            android:text="@string/no_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

    <ImageView
            android:id="@+id/query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/query"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/type"
            android:layout_marginTop="40dp"/>
</RelativeLayout>
