<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- title -->

    <FrameLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3aace0" >

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_text"
            android:textColor="#ffffff"
            android:textSize="26sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/login_field"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/usernamebg"
            android:hint="@string/username_register_hint"
            android:maxLength="11"
            android:numeric="integer"
            android:paddingLeft="100dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/passwordbg"
            android:hint="@string/password_register_hint"
            android:inputType="textPassword"
            android:paddingLeft="100dp" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/repasswordbg"
            android:hint="@string/repassword_register_hint"
            android:inputType="textPassword"
            android:paddingLeft="120dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/list_bg"
            android:orientation="horizontal"
            android:weightSum="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5" >

                <EditText
                    android:id="@+id/register_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="请输入验证码"
                    android:paddingLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5" >

                <TextView
                    android:id="@+id/register_resend"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|right"
                    android:background="@drawable/corners_bg_sblue"
                    android:gravity="center_vertical|right"
                    android:paddingRight="5dp"
                    android:text="获取验证码"	
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp" >

            <ImageView
                android:id="@+id/btn_commit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/commitreg" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>