<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/find_back_passwords"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- title -->

    <FrameLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3aace0" >

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/find_back_pswd_text"
            android:textColor="#ffffff"
            android:textSize="26sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/login_field"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/textpswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/forget_pswd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="用户名:"
                android:textColor="#636363"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:numeric="integer"
                android:phoneNumber="true"
                android:maxLength="11"
                android:hint="@string/username_register_hint"
                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp" >

            <ImageView
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/findpswdback" />
        </RelativeLayout>

        <TextView
            android:id="@+id/forget_pswd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:singleLine="false"
            android:text="@string/remind"
            android:textColor="#636363"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

    </LinearLayout>

</RelativeLayout>